--- a/Preços_mundiais_da_internet_em_2022.ipynb
+++ b/Preços_mundiais_da_internet_em_2022.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Preços mundiais da internet em 2022.ipynb",
+      "name": "Cópia de Preços mundiais da internet em 2022.ipynb",
       "provenance": [],
       "include_colab_link": true
     },
@@ -48,7 +48,7 @@
         "\n",
         "Docente: Tásia Moura Cardoso do Vale\n",
         "\n",
-        "Discentes: Nathan Galdêncio Leocádio"
+        "Discentes: Valdirley N Braz"
       ],
       "metadata": {
         "id": "gx1d9VysCTM6"
